blog added in the menu

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ navbar-links:
   Publication:
     - Citing PrAnaViz:
     - Publications using PrAnaViz:
+  Blog: "https://pranaviz.github.io/blog"
 
 # --- Logo --- #
 
