--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ footer-link-col: "#404040"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
-#google_analytics: ""
+google_analytics: "G-46NXB7G3JN"
 
 # Google Tag Manager ID
 #gtm: ""
