--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ author: Kishore Jagadeesan
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Demo App: "http://pranaviz.bath.ac.uk:3838/pranaviz/"
   PrAna: "prana"
   Documentation:
     - PrAna: 
