--- a/_config.yml
+++ b/_config.yml
@@ -10,18 +10,16 @@ author: Kishore Jagadeesan
 
 navbar-links:
   Demo App : "http://51.141.234.162/shiny/pranaviz/"
-  About: "about"
   Documentation:
     - PrAna: "https://pranaviz.bath.ac.uk/PrAna/"
     - PrAnaViz: "quick-start"
-  #Citing PrAnaViz: "citation"
   Publications: "pub-app"
 
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: #"/assets/img/avatar-icon.png"
+#avatar: #"/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -37,28 +35,8 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "jkkishore85@gmail.com"
-  #facebook: deanattali
   github: PrAnaViz
-  #twitter: daattali
-  #patreon: DeanAttali
-  #youtube: c/daattali
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
-
+  
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
 # rss-description: This website is a virtual proof that I'm awesome
@@ -86,7 +64,7 @@ feed_show_excerpt: true
 feed_show_tags: true
 
 # The keywords to associate with your website, for SEO purposes
-keywords: "pranaviz,prescription analysis,NHS digital,shinydashboard,prescription data,England prescription data"
+keywords: "pranaviz, prescription analysis, NHS digital, shinydashboard, prescription data, England prescription data"
 
 # --- Colours / background image --- #
 
@@ -222,7 +200,3 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
-
